# tectonic-map-generator

./: .gitignore  CMakeLists.txt  README.md
dev/: CMakeLists.txt  visualizations.py  voronoi_from_poisson_disk.cpp
dev/algorithms/: CMakeLists.txt
dev/algorithms/boundary_identification/: CMakeLists.txt  boundary.cpp  boundary.hpp  test_visually_boundary.cpp  visualize.py
dev/algorithms/point_in_polygon/: point_in_polygon.hpp  test.cpp
dev/algorithms/poisson_disk_sampling/: CMakeLists.txt  PoissonDiskSampler.cpp  PoissonDiskSampler.hpp  test.cpp  visualize_test.py
dev/algorithms/polygon_center/: CMakeLists.txt  example.cpp  polygon_center.cpp  polygon_center.hpp  test.cpp  visualize_example.py  visualize_test.py
dev/algorithms/polygon_center/point_in_polygon/: CMakeLists.txt  point_in_polygon.cpp  test.cpp
dev/algorithms/space_partitioning/: CMakeLists.txt  normal_distribution_test.cpp  region_plot.py  space_partition.cpp  space_partition.hpp  test.cpp  tmp.cpp  tmp.hpp  visualize.py
dev/algorithms/triangle_circumcenter/: CMakeLists.txt  Readme.md  test_triangle_circumcenter.cpp  triangle_circumcenter.cpp  triangle_circumcenter.hpp
dev/algorithms/voronoi_diagram/: CMakeLists.txt  LineClipper.cpp  LineClipper.hpp  Readme.md  beachline_visualization.py  geometry.cpp  geometry.hpp  parabola_intercept.py  performance_plot.py  test.cpp  test_fortunes_alg.cpp  triangle_circumcentre.py  visualize_fortunes_algo.py  visualize_test.py  voronoi_diagram.cpp  voronoi_diagram.hpp
inc/: Coordinate.hpp  FileIO.hpp  distribution.hpp  plate.hpp  tectonicSimulation.hpp  tmpfile.cpp
src/: plate.cpp  tectonicSimulation.cpp
test/: test.cpp
